--- a/FoodDeliveryApp/app/src/main/res/values/strings.xml
+++ b/FoodDeliveryApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FoodDeliveryApp</string>
+    <string name="home">홈</string>
+    <string name="my">My</string>
 </resources>
